pgcenter (devel) unstable; urgency=low

  * add mreport() - general function for log/error message reporting.
  * totally replace strncpy with snprintf.
  * fix check first symbol in listen_addresses.
  * add pg_stat_progress_vacuum (since 9.6).
  * add compatibility with pg-9.6 (pg_stat_activity).
  * use set_escdelay() instead of direct changing ESCDELAY.
  * fix signal_group_backend(), doesn't work if mask has more than one flag.
  * improve const correctness.
  * autovac info: print number of user vacuum and autovac max worker limit.
  * check_pg_listen_addr() refactoring.
  * pg_stat_replication now works on standbys too.
  * pg_stat_statements: use menu and switching, remove c, v, V hotkeys.
  * show details and hint if query has failed.
  * rewrite replication context, show detailed lag info.
  * pg_stat_statements: add local IO information context (V - hotkey).
  * nicstat: return from function if sock() failed (instead of program exit).
  * print_log() refactoring, check return value for fstat.
  * reconnect_if_failed() refactoring, eliminate unwanted 'get pg version' queries.
  * print_autovac_info()/print_postgres_activity() refactoring, merge queries into one.
  * print_autovac_info() refactoring, remove unnecessary 'else' sections.
  * print_postgres_activity() refactoring, remove unnecessary 'else' sections.
  * read_uptime() refactoring, use fscanf instead of sscanf, check ret.value.
  * get_loadavg() refactoring, use float's array anf reduce number of calls.
  * use unsigned data types for always positive variables.
  * stdout sanity check in password_prompt().
  * use sizeof(...) instead of macros.
  * refresh interval is limited between 1 and 300 seconds.
  * check port number at startup.
  * replace raw numbers to 'define' macros.
  * replace strcpy/strcat with strncpy/snprintf.
  * sanitize malloc() or replace it with char.
  * print_*stat*: don't exit if stats read failed.
  * print_mem: fix free swap.